@@ -1,5 +1,25 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX filelight-1.9_rc3-gcc45.patch 596 RMD160 14eef118e5dbc7ae5057e0165fedb3b274ef5229 SHA1 394caefb49731533fbb776f1e9b3e3d279013d36 SHA256 a1a62bad725b6f770f0cb68634f1de08fc390140e666390763da9070ad3e34f8
 DIST 99561-filelight-1.9rc3.tgz 93481 RMD160 26112c392f0652a8eb66c4afedb9234cf901f2ef SHA1 226e2272757f615842f51247e64c17921c895aee SHA256 58a323aff9939c5c31629bd5ac96118d092c90a2b1d7dd42d479332287e85e52
-EBUILD filelight-1.9_rc3.ebuild 832 RMD160 40f6f51e61aed79c84cf1b9698b4e22da3e90861 SHA1 924496e3eda5fd792cbd9d07634d7e7024937a76 SHA256 4194fff8cc8e15e888372364a627d2cd455e49a8cb7d03a468f73a7143c0dc8c
-MISC ChangeLog 7620 RMD160 43ebb75804bcf76f7b4fdf76e8db1ca0e6890220 SHA1 bfa5867887ffe5e271246e1ad0df683a872afe41 SHA256 bbaba6925830236eaeffa5cb3575dccc8831c6ef038b2d6a66321c6a53d26632
+EBUILD filelight-1.9_rc3.ebuild 815 RMD160 97039b5f154cb8c25df87d0dc38b013c5862dfed SHA1 db11f20f79f246286691c04714e903af1bd955d9 SHA256 da4cf34b8c529c694aa10067e4f4c84bc56e7ee753580638779f0a808f675498
+MISC ChangeLog 7757 RMD160 3feb546ddb9cc730ac042a5c50e5977e97678ba9 SHA1 a2f03e1fe6f2974f450b63898a2c8ef4c7f1e140 SHA256 f151550e66a3ff86f80e954e997df1b06d2807a557691e9eb1e37c9e072167ff
 MISC metadata.xml 156 RMD160 ecce3b981f150c45ae1e84e2d208e678d6124259 SHA1 b64f7c0b4e5db816d82ad19848f72118af129d35 SHA256 2f4da28506b9d4185f320f67a6191d30c7a921217ed4447ed46ea0bc4aefc79a
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.16 (GNU/Linux)
+
+iQIcBAEBAgAGBQJNKatOAAoJENwGBM22xffeYsMP/1e0oGuMvrB53+mv65N+q5NH
+jv+BNMSc+0vWXs+eeodgA4yexa4MfX4ECZJGZeCp4N2W5ODC84Bsa6JdgVai2d8k
+BOkc+xN+wvfd0NJz16GUmeRxI1cV4M5fg7cIq7FzTGNzLvqZYlW5OkbruZqyjNYU
+wN1T3G/yzJtYtLCtycbfaGX/Y0UMisURwcz8ahkcHIeISMlsYjFqSx+E+sUnCXS8
+EDEyWh5ViOlBNhKCV9JsYkSEGll5g2/YRhKT6nlGuvGqjLAwyGLpKn1yMFUfW6oT
+1mr8usz5u1ddjBQA+Yeo+CZtAx8M5bdoJLBtyE31YvO57rPlQHaEUSZBGtnZk/Sv
+05t8h/XO4buv+ESEwffyTsR0Je53GMEY+B8Ud6W8si1QMig2RQu5einF/ALZYgnq
+2Cd5Ns4p0selTRZ5keMg5jVbUwD4hzkY1VqWDqSO5Pyh8pB4DCuzvb82Ly5CiasX
+YXhuKsmbrP+IbzjjAC57kNvT1/RfPXSuBppgvmOwhd8EueN/5Lb9mjzZpOgXy3+P
+UxOOwMbG7HVePo64Y6gdHZ9yvBSg6qwvX8axRTtEMyisXmVmfHPZ5MycjB8R2ymS
+5whEyLzqqulKCCaLPofbEeTTUt+9kh+6HIgwaSUja2MOTGlJ1xiyonxEdhxM+g9+
+gkdf7kfpErO/5x1hKQV8
+=WctS
+-----END PGP SIGNATURE-----
