@@ -1,6 +1,6 @@
-# Copyright 1999-2010 Gentoo Foundation
+# Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/kde-misc/filelight/Attic/filelight-1.9_rc3.ebuild,v 1.8 2010/06/21 17:09:21 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-misc/filelight/Attic/filelight-1.9_rc3.ebuild,v 1.9 2011/01/09 12:34:18 dilfridge Exp $
 
 EAPI=2
 KMNAME="playground/utils"
@@ -18,7 +18,7 @@ SLOT="4"
 KEYWORDS="amd64 ~ppc x86"
 IUSE="debug"
 
-RDEPEND="x11-apps/xdpyinfo"
+RDEPEND=""
 
 S=${WORKDIR}/${MY_P}
 
