@@ -1,6 +1,10 @@
 # ChangeLog for kde-misc/filelight
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-misc/filelight/Attic/ChangeLog,v 1.43 2010/06/21 17:09:21 ssuominen Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/kde-misc/filelight/Attic/ChangeLog,v 1.44 2011/01/09 12:34:18 dilfridge Exp $
+
+  09 Jan 2011; Andreas K. Huettel <dilfridge@gentoo.org>
+  filelight-1.9_rc3.ebuild:
+  Remove unneccessary RDEPEND on x11-apps/xdpyinfo
 
   21 Jun 2010; Samuli Suominen <ssuominen@gentoo.org>
   filelight-1.9_rc3.ebuild:
